basic mobile styling

--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -3,12 +3,12 @@
 }
 
 #sp10-title {
-  margin-top: 0.25em;
-  font-size: 4em;
+  margin-top: 0.25rem;
+  font-size: 4rem;
 }
 
 #sp10-updated {
-  margin-top: 3em;
+  margin-top: 2rem;
 }
 
 .right {
