--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -11,11 +11,15 @@
   margin-top: 2rem;
 }
 
-.right {
+.text-right {
   text-align: right;
 }
 
-.center {
+.text-left {
+  text-align: left;
+}
+
+.text-center {
   text-align: center;
 }
 
