--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -7,6 +7,12 @@
   font-size: 4rem;
 }
 
+#sp10-subtitle {
+  margin-top: 0.52rem;
+  font-size: 1rem;
+  color: gray;
+}
+
 #sp10-updated {
   margin-top: 2rem;
 }
