format chart and reorg components

--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -7,8 +7,10 @@
   font-size: 4rem;
 }
 
-#sp10-updated {
-  margin-top: 2rem;
+#sp10-subtitle {
+  margin-top: -1rem;
+  margin-bottom: 2rem;
+  color: gray;
 }
 
 .text-right {
