--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -1,7 +1,3 @@
-.outline {
-  border: 1px solid lightgray;
-}
-
 #sp10-title {
   margin-top: 0.25rem;
   font-size: 4rem;
@@ -9,8 +5,15 @@
 
 #sp10-subtitle {
   margin-top: -1rem;
-  margin-bottom: 2rem;
   color: gray;
+}
+
+.padding-10 {
+  padding: 10px;
+}
+
+.padding-right-30 {
+  padding-right: 30px;
 }
 
 .text-right {
