--- a/app/assets/stylesheets/react_calendar_heatmap.scss
+++ b/app/assets/stylesheets/react_calendar_heatmap.scss
@@ -1,3 +1,14 @@
+.scrolling-wrapper-mobile {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+
+  .react-calendar-heatmap {
+    width: 1024px;
+    display: inline-block;
+  }
+}
+
 .react-calendar-heatmap text {
   font-size: 8px;
   font-family: "Roboto", sans-serif;
