hook up and format heatmap

--- a/app/assets/stylesheets/react_calendar_heatmap.scss
+++ b/app/assets/stylesheets/react_calendar_heatmap.scss
@@ -27,7 +27,7 @@
 
 // sp10 color scale
 .react-calendar-heatmap .color-sp10-0 {
-  fill: #eeeeee;
+  fill: #777777;
 }
 .react-calendar-heatmap .color-sp10-1 {
   fill: #d6e685;
