--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -24,7 +24,6 @@
 }
 
 #sp10-title {
-  margin-top: 0.25rem;
   font-size: 4rem;
 }
 
@@ -34,12 +33,8 @@
   color: gray;
 }
 
-.padding-10 {
-  padding: 10px;
-}
-
-.padding-right-30 {
-  padding-right: 30px;
+.container {
+  padding: 20px;
 }
 
 .text-right {
@@ -76,7 +71,7 @@
 }
 
 .ticker-number {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .ticker-section {
@@ -85,6 +80,11 @@
 
 .ticker-name {
   font-size: 0.8rem;
+}
+
+.ticker-container-flex {
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (max-width: 600px) {
