--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -113,6 +113,13 @@
   font-weight: 700;
 }
 
+.stock-row-container {
+  cursor: pointer;
+  :hover {
+    background-color: rgb(245, 245, 245);
+  }
+}
+
 .stock-row {
   padding: 17px 0;
   border-bottom: 1px solid rgb(231, 231, 231);
