--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -134,7 +134,7 @@
   font-weight: 400;
   width: 100px;
   color: white;
-  background-color: #3fb853 !important;
+  background-color: #359b46 !important;
   border-radius: 3px;
   padding: 2px 11px;
 }
