--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -129,6 +129,10 @@
   margin-bottom: 15px;
 }
 
+.horizontal-paragraph-spacer {
+  margin-bottom: 10px;
+}
+
 .ticker-name {
   font-size: 0.8rem;
 }
