--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -204,6 +204,11 @@
   }
 }
 
+.constituent-row {
+  padding: 10px 0;
+  border-bottom: 1px solid rgb(231, 231, 231);
+}
+
 .stock-row-percent-red {
   font-weight: 400;
   width: 100px;
