--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -350,6 +350,12 @@
   padding: 20px 0 30px 0;
 }
 
+.change_constituent_icon {
+  color: green;
+  padding-left: 0.5rem;
+  cursor: pointer;
+}
+
 @media (max-width: 600px) {
   #sp10-title {
     text-align: center;
