--- a/app/assets/stylesheets/sp10_tracker.scss
+++ b/app/assets/stylesheets/sp10_tracker.scss
@@ -356,6 +356,70 @@
   cursor: pointer;
 }
 
+$background: #f6f7f8;
+$grey-nuance-lighter: #eeeeee;
+$grey-nuance-darker: #dddddd;
+$fade-grey: #e8e8e8;
+
+.loading {
+  background: #fff;
+  width: 100%;
+  border-radius: 3px;
+
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: placeload;
+  animation-name: placeload;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  background: $background;
+  background: $grey-nuance-lighter;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(8%, $grey-nuance-lighter),
+    color-stop(18%, $grey-nuance-darker),
+    color-stop(33%, $grey-nuance-lighter)
+  );
+  background: -webkit-linear-gradient(
+    left,
+    #eeeeee 8%,
+    #dddddd 18%,
+    #eeeeee 33%
+  );
+  background: linear-gradient(
+    to right,
+    $grey-nuance-lighter 8%,
+    $grey-nuance-darker 18%,
+    $grey-nuance-lighter 33%
+  );
+  -webkit-background-size: 1200px 104px;
+  background-size: 1200px 104px;
+}
+
+@-webkit-keyframes placeload {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
+@keyframes placeload {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
 @media (max-width: 600px) {
   #sp10-title {
     text-align: center;
