--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>SP10 Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:image" content="imac-mockup.jpg" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6c29ec917e.js" crossorigin="anonymous"></script>
   <%= stylesheet_link_tag 'application', media: 'all' %>
